@@ -342,6 +342,7 @@
 <script src="Screens/MiniGame/KinkyDungeon/KinkyDungeonFight.js"></script>
 <script src="Screens/MiniGame/KinkyDungeon/KinkyDungeonDraw.js"></script>
 <script src="Screens/MiniGame/KinkyDungeon/KinkyDungeonMagic.js"></script>
+<script src="Screens/MiniGame/KinkyDungeon/KinkyDungeonShrine.js"></script>
 <script src="Screens/MiniGame/KinkyDungeon/KinkyDungeonItem.js"></script>
 <script src="Screens/MiniGame/KinkyDungeon/KinkyDungeonInventory.js"></script>
 <script src="Screens/Inventory/Glasses/EyePatch1/EyePatch1.js"></script>
